# bizdate

./: .gitignore  Cargo.toml  README.md  TODO.md  noxfile.py  pyproject.toml  ruff.toml  zensical.toml
.github/workflows/: CI.yml
docs/: index.md
docs/reference/: buscal.md  busday_conv.md
python/bizdate/: __init__.py  rs.pyi
python/datecalc/: __init__.py  rs.pyi
python/tests/: test_all.py
src/: buscal.rs  errors.rs  lib.rs
