[package]
name = "datecalc"
version = "0.1.0"
edition = "2024"

[features]
python = ["dep:pyo3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "datecalc"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
chrono = "0.4.43"
pyo3 = {version = "0.27.0", features = ["hashbrown", "chrono"], optional = true}
