[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "bizdate"
authors = [
    {name = "Joshua Kitzler"},
]
description = "Business calendar and business date logic for Python, written in Rust."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 3 - Alpha",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: Apache Software License",
]
license-files = ["LICENSE"]


dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.maturin]
module-name = "bizdate.rs"
python-source = "python"
bindings = "pyo3"
features = ["python"]

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "maturin-import-hook>=0.3.0",
    "memray>=1.19.1",
    "nox>=2025.11.12",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "pytest-memray>=1.8.0",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
doc = [
    "zensical>=0.0.23",
]
docs = [
    "mkdocstrings-python>=2.0.2",
]
